Реализованы пополнение кошелька, покупки и доход